# hacks-ai-szfo-23

./: README.md  data.xlsx  main.py  model.py  package-lock.json  package.json  pyproject.toml  requirements.txt  text_classifer.py  vue.config.js
models/model_text_cat/: config.cfg  meta.json
models/model_text_cat/textcat/: cfg
models/model_text_cat/tok2vec/: model
models/model_text_cat/vocab/: strings.json
src/: App.vue  processed_images.json  users.json
src/components/UserPage/: userCheckout.vue
src/components/loginView/: LanguageSetup.vue
src/components/userReview/: userPreview.vue  userTag.vue
src/router/: index.js
src/store/: index.js
src/store/user/: getters.js  index.js  mutations.js  state.js
src/views/: HomeView.vue  LoginView.vue  RegView.vue  UserPageView.vue  loadDataResultView.vue  loadDataView.vue  userReviewView.vue
